OneMaster/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: k8s.nginx
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test
          servicePort: http
